--- a/FS_h/backEnd/package.json
+++ b/FS_h/backEnd/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mongoose": "^8.0.3",
+    "nodemon": "^2.0.22"
   }
 }
